OR-1322-run update foundry

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -76,6 +76,10 @@ jobs:
             run: |
               echo "/home/runner/.bashrc" >> $GITHUB_PATH
 
+          - name: Run update:foundry
+            run: |
+              npm run update:foundry
+
           - name: Verify versions
             run: |
               git --version
