--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -76,7 +76,7 @@ jobs:
             run: |
               echo "/home/runner/.bashrc" >> $GITHUB_PATH
 
-          - name: Run update:foundry
+          - name: update foundry
             run: |
               npm run update:foundry
 
