--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -76,7 +76,7 @@ jobs:
             run: |
               echo "/home/runner/.bashrc" >> $GITHUB_PATH
 
-          - name: update foundry-up
+          - name: update foundry-up.
             run: |
               npm run update:foundry
 
