OR-1322-run update foundry

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -80,7 +80,7 @@ jobs:
             run: |
               npm run update:foundry
 
-          - name: Verify versions
+          - name: Verify versions.
             run: |
               git --version
               go version
