OR-1322-foundry update path

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -76,7 +76,7 @@ jobs:
             run: |
               npm run update:foundry
 
-          - name: Verify versions-2
+          - name: Verify versions
             run: |
               git --version
               go version
