OR-1322-foundry set  path

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -80,7 +80,7 @@ jobs:
           - name: Run Foundry
             run: foundryup
 
-          - name: Verify versions
+          - name: Verify versions.
             run: |
               git --version
               go version
