OR-1322-foundry set  path

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -75,7 +75,7 @@ jobs:
               source ~/.bashrc
 
           - name: Set PATH
-            run: echo "$HOME/.foundry/bin:$PATH" >> $GITHUB_ENV
+            run: echo "PATH=$HOME/.foundry/bin:$PATH" >> $GITHUB_ENV
 
           - name: Run Foundry
             run: ~/.foundry/bin/foundryup
