--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -69,7 +69,7 @@ jobs:
           - run: evm --version
           - run: rlpdump -h
 
-          - name: Install Foundry
+          - name: Install Foundry.
             run:
               curl -L https://foundry.paradigm.xyz | bash
 
