OR-1322-curl -L https://foundry.paradigm.xyz | bash

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -69,12 +69,11 @@ jobs:
           - run: evm --version
           - run: rlpdump -h
 
-          - name: Install Foundry.
-            run:
+          - name: Install Foundry
+            run: |
               curl -L https://foundry.paradigm.xyz | bash
-
-          - name: Run Foundry
-            run: foundry up
+              source ~/.bashrc
+              foundry up
 
           - name: Verify versions.
             run: |
