--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -69,9 +69,10 @@ jobs:
           - run: evm --version
           - run: rlpdump -h
 
-          - name: Install Foundry
+          - name: Install and Run Foundry
             run: |
               curl -L https://foundry.paradigm.xyz | bash
+              source /home/runner/.bashrc
               foundryup
 
           - name: Verify versions.
