--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -72,7 +72,7 @@ jobs:
           - name: Install and Run Foundry
             run: |
               curl -L https://foundry.paradigm.xyz | bash
-              echo "$HOME/.foundry/bin" >> $GITHUB_PATH
+              echo "$HOME/.foundry/bin" >> $GITHUB_ENV
               foundryup
 
           - name: Verify versions.
