OR-1322-curl -L https://foundry.paradigm.xyz | bash

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -72,8 +72,10 @@ jobs:
           - name: Install and Run Foundry.
             run: |
               curl -L https://foundry.paradigm.xyz | bash
+              echo 'export PATH="$HOME/.foundry/bin:$PATH"' >> $HOME/.bashrc
+              source /home/runner/.bashrc
               echo "$HOME/.foundry/bin" >> $GITHUB_PATH
-              $HOME/.foundry/bin/foundryup
+              foundryup
 
           - name: Verify versions.
             run: |
