OR-1322-curl -L https://foundry.paradigm.xyz | bash

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -75,7 +75,7 @@ jobs:
               echo 'export PATH="$HOME/.foundry/bin:$PATH"' >> $HOME/.bashrc
               source /home/runner/.bashrc
               echo "$HOME/.foundry/bin" >> $GITHUB_PATH
-              foundryup
+              sudo foundryup
 
           - name: Verify versions.
             run: |
