OR-1322-troubleshooting foundryup command not found

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -75,7 +75,9 @@ jobs:
               echo 'export PATH="$HOME/.foundry/bin:$PATH"' >> $HOME/.bashrc
               source /home/runner/.bashrc
               echo "$HOME/.foundry/bin" >> $GITHUB_PATH
-              sudo foundryup
+              cat ~/.bashrc
+              ls -alrt ~/.foundry/bin
+              foundryup
 
           - name: Verify versions.
             run: |
