OR-1322-troubleshooting foundryup command not found

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -76,7 +76,7 @@ jobs:
               source /home/runner/.bashrc
               echo "$HOME/.foundry/bin" >> $GITHUB_PATH
               cat ~/.bashrc
-              ls -alrt ~/.foundry/bin
+              ls -alrt ~/.
               foundryup
 
           - name: Verify versions.
