--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -77,6 +77,7 @@ jobs:
               echo "$HOME/.foundry/bin" >> $GITHUB_PATH
               cat ~/.bashrc
               ls -alrt ~/.
+              echo $HOME
               echo ${XDG_CONFIG_HOME:-$HOME}
               foundryup
 
