OR-1322-troubleshooting foundryup command not found

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -78,6 +78,7 @@ jobs:
               cat ~/.bashrc
               ls -alrt ~/.
               echo $HOME
+              echo $XDG_CONFIG_HOME
               echo ${XDG_CONFIG_HOME:-$HOME}
               foundryup
 
