OR-1322-troubleshooting foundryup command not found

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -79,7 +79,9 @@ jobs:
               ls -alrt ~/.
               echo $HOME
               echo $XDG_CONFIG_HOME
-              echo ${XDG_CONFIG_HOME:-$HOME}
+              echo ${XDG_CONFIG_HOME:-$HOME
+              ls -alrt /home/runner/.config
+              ls -alrt /home/runner/.config/.foundry
               foundryup
 
           - name: Verify versions.
