--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -76,7 +76,7 @@ jobs:
               source /home/runner/.bashrc
               echo "$HOME/.foundry/bin" >> $GITHUB_PATH
               cat ~/.bashrc
-              ls -alrt ~/.
+              ls -alrt ~/.config
               echo $HOME
               echo $XDG_CONFIG_HOME
               echo ${XDG_CONFIG_HOME:-$HOME
