OR-1322-troubleshooting foundryup command not found

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -86,7 +86,7 @@ jobs:
               export PATH="$FOUNDRY_BIN_PATH:$PATH"
               foundryup
 
-          - name: Verify versions.
+          - name: Verify versions
             run: |
               git --version
               go version
