--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -77,14 +77,14 @@ jobs:
               echo "$HOME/.foundry/bin" >> $GITHUB_PATH
               cat ~/.bashrc
               ls -alrt ~/.config
-              echo $HOME
-              echo $XDG_CONFIG_HOME
-              echo ${XDG_CONFIG_HOME:-$HOME
-              ls -alrt /home/runner/.config
-              ls -alrt /home/runner/.config/.foundry
-              FOUNDRY_BIN_PATH=${FOUNDRY_DIR-"${XDG_CONFIG_HOME:-$HOME}/.foundry/bin"}
-              export PATH="$FOUNDRY_BIN_PATH:$PATH"
-              foundryup
+              # echo $HOME
+              # echo $XDG_CONFIG_HOME
+              # echo ${XDG_CONFIG_HOME:-$HOME
+              # ls -alrt /home/runner/.config
+              # ls -alrt /home/runner/.config/.foundry
+              # FOUNDRY_BIN_PATH=${FOUNDRY_DIR-"${XDG_CONFIG_HOME:-$HOME}/.foundry/bin"}
+              # export PATH="$FOUNDRY_BIN_PATH:$PATH"
+              ~/.config/.foundry/bin/foundryup
 
           - name: Verify versions
             run: |
