OR-1322-troubleshooting foundryup command not found

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -87,6 +87,10 @@ jobs:
             #   ~/.config/.foundry/bin/foundryup
             uses: foundry-rs/foundry-toolchain@v1
 
+          - name: update foundry
+            run: |
+              npm run update:foundry
+
           - name: Verify versions
             run: |
               git --version
