OR-1322-foundry path setting

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -69,15 +69,13 @@ jobs:
           - run: evm --version
           - run: rlpdump -h
 
-          - name: Install and Run Foundry.
+          - name: Install and Run Foundry
             run: |
               curl -L https://foundry.paradigm.xyz | bash
               FOUNDRY_BIN_PATH=~/.config/.foundry/bin
               echo 'export PATH="$FOUNDRY_BIN_PATH:$PATH"' >> ~/.bashrc
               source ~/.bashrc
               foundryup
-
-          - name: Update
 
           - name: Verify versions
             run: |
