--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -76,20 +76,15 @@ jobs:
               echo $FOUNDRY_BIN_PATH
               export PATH="$FOUNDRY_BIN_PATH:$PATH"
               foundryup
+              cp $FOUNDRY_BIN_PATH/* /usr/bin
 
           - name: Verify versions
             run: |
-              which git
               git --version
-              which go
               go version
-              which node
               node --version
-              which pnpm
               pnpm --version
-              which make
               make --version
-              which geth
               geth version
               forge version
 
