OR-1322-foundry path setting

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -78,7 +78,7 @@ jobs:
               foundryup
               sudo cp $FOUNDRY_BIN_PATH/* /usr/bin
 
-          - name: Verify versions
+          - name: Verify versions.
             run: |
               git --version
               go version
