OR-1322-foundry path setting

--- a/.github/workflows/deposit&withdrawal.yml
+++ b/.github/workflows/deposit&withdrawal.yml
@@ -86,7 +86,7 @@ jobs:
               pnpm --version
               make --version
               geth version
-              forge version
+              forge --version
 
 
           - name: Install dependencies
