OR-1322-update foundry using docker image(docker cp)

--- a/.github/workflows/deposit_WithdrawalContainer.yml
+++ b/.github/workflows/deposit_WithdrawalContainer.yml
@@ -73,7 +73,7 @@ jobs:
           - run: rlpdump -h
 
 
-          - name: Verify versions.
+          - name: Verify versions
             run: |
               git --version
               go version
