--- a/.github/workflows/deposit_WithdrawalContainer.yml
+++ b/.github/workflows/deposit_WithdrawalContainer.yml
@@ -8,11 +8,13 @@ jobs:
   env-setting:
     name: Os-Stetting-Deposit_WithdrawalTest
     runs-on: ubuntu-latest
-    container:
-      image: onthertech/titan-ci-builder:latest
-
 
     steps:
+          - name: Install Docker
+            run: |
+              curl -fsSL https://get.docker.com -o get-docker.sh
+              sudo sh get-docker.sh
+
           - name: Checkout
             uses: actions/checkout@v3
 
@@ -50,7 +52,7 @@ jobs:
             with:
               go-version: '1.21'
 
-          - name: Copy binary files from Docker container
+          - name: Copy files from Docker container
             run: |
               container_id=$(docker create onthertech/titan-ci-builder:latest)
               mkdir -p $HOME/bin
@@ -63,7 +65,6 @@ jobs:
             run: |
               chmod +x $HOME/bin/*
               echo "$HOME/bin" >> $GITHUB_PATH
-
 
           - name: Install dependencies
             run: |
@@ -91,10 +92,3 @@ jobs:
             run: |
               cd packages/sdk
               npx hardhat deposit-eth --amount 40 --to 0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC --network devnetL1
-
-
-
-
-
-
-
