--- a/.github/workflows/deposit_WithdrawalContainer.yml
+++ b/.github/workflows/deposit_WithdrawalContainer.yml
@@ -17,11 +17,6 @@ jobs:
           - name: Add repository to git safe directories
             run: git config --global --add safe.directory $GITHUB_WORKSPACE
 
-          - name: Install Geth
-            uses: gacts/install-geth-tools@v1
-            with:
-              version: '1.13.4'
-
           - name: Setup Go
             uses: actions/setup-go@v3
             with:
@@ -43,6 +38,10 @@ jobs:
 
           - name: install pnpm
             run: npm install -g pnpm@8
+
+          - name: Install dependencies
+            run: |
+              pnpm install
 
           - name: build necessary files for @eth-optimism/core-utils
             run: pnpm run build
