OR-1322-minimized installment

--- a/.github/workflows/deposit_WithdrawalContainer.yml
+++ b/.github/workflows/deposit_WithdrawalContainer.yml
@@ -13,15 +13,6 @@ jobs:
           - name: Checkout
             uses: actions/checkout@v3
 
-          # Declares the repository safe and not under dubious ownership.
-          - name: Add repository to git safe directories
-            run: git config --global --add safe.directory $GITHUB_WORKSPACE
-
-          - name: Setup Go
-            uses: actions/setup-go@v3
-            with:
-              go-version: '1.21'
-
           - name: Copy files from Docker container
             run: |
               container_id=$(docker create onthertech/titan-ci-builder:latest)
@@ -35,6 +26,11 @@ jobs:
             run: |
               chmod +x $HOME/bin/*
               echo "$HOME/bin" >> $GITHUB_PATH
+
+          - name: Install Geth
+            uses: gacts/install-geth-tools@v1
+            with:
+              version: '1.13.4'
 
           - name: install pnpm
             run: npm install -g pnpm@8
