OR-1322- without test.sol

--- a/.github/workflows/deposit_WithdrawalContainer.yml
+++ b/.github/workflows/deposit_WithdrawalContainer.yml
@@ -48,15 +48,17 @@ jobs:
             with:
               version: '1.13.4'
 
-          - name: install pnpm
-            run: npm install -g pnpm@8
-
-          - name: Install dependencies
+          - name: Install submodule for test.sol
             run: |
-              pnpm install
+              git submodule init
+              git submodule update
 
-          - name: build necessary files for @eth-optimism/core-utils
-            run: pnpm run build
+          - name: Install submodule for test.sol2
+            run: |
+              cd packages/contracts-bedrock/lib/forge-std/lib/ds-test
+              git submodule init
+              git submodule update
+              cd ../../../../../..
 
           - name: Run devnet-up command
             run: make devnet-up
