OR-1322- install packages

--- a/.github/workflows/deposit_WithdrawalContainer.yml
+++ b/.github/workflows/deposit_WithdrawalContainer.yml
@@ -55,6 +55,9 @@ jobs:
             run: |
               pnpm install
 
+          - name: build necessary projects
+            run: pnpm run build
+
           - name: Run devnet-up command
             run: make devnet-up
 
