feat(OR-1303): update kustomization file after pushing the docker images

--- a/.github/workflows/release-docker-nightly.yml
+++ b/.github/workflows/release-docker-nightly.yml
@@ -337,3 +337,58 @@ jobs:
           inputs: onthertech/titan-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}
           images: onthertech/titan-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}-amd64,onthertech/titan-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}-arm64
           push: true
+
+  update-kustomize:
+    name: Update image version in kustomize manifest file(nightly)
+    needs:
+      - version
+      - etc
+      - op-packages
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          repository: onthertech/tokamak-titan-infra
+          ref: main
+          token: ${{ secrets.BOT_ACCESS_TOKEN }}
+          path: tokamak-titan-infra
+
+      - name: Setup Kustomize
+        uses: imranismail/setup-kustomize@v1
+        with:
+          github-token: ${{ secrets.BOT_ACCESS_TOKEN }}
+
+      - name: Update titan-op-node Kubernetes resources
+        run: |
+          cd tokamak-titan-infra/titan2/kustomize/overlays/titan-sepolia-test
+          kustomize edit set image onthertech/titan-op-node:${{ needs.version.outputs.nightly-docker-tag}}
+
+      - name: Update titan-op-proposer Kubernetes resources
+        run: |
+          cd tokamak-titan-infra/titan2/kustomize/overlays/titan-sepolia-test
+          kustomize edit set image onthertech/titan-op-proposer:${{ needs.version.outputs.nightly-docker-tag}}
+
+      - name: Update titan-op-batcher Kubernetes resources
+        run: |
+          cd tokamak-titan-infra/titan2/kustomize/overlays/titan-sepolia-test
+          kustomize edit set image onthertech/titan-op-batcher:${{ needs.version.outputs.nightly-docker-tag}}
+
+      - name: Update titan-proxyd Kubernetes resources
+        run: |
+          cd tokamak-titan-infra/titan2/kustomize/overlays/titan-sepolia-test
+          kustomize edit set image onthertech/titan-proxyd:${{ needs.version.outputs.nightly-docker-tag}}
+
+      - name: Show updated Kubernetes resources
+        run: |
+          cd tokamak-titan-infra/titan2/kustomize/overlays/titan-sepolia-test
+          cat kustomization.yaml
+
+      - name: Commit and push changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          default_author: github_actions
+          github_token: ${{ secrets.BOT_ACCESS_TOKEN }}
+          message: '[AUTO] Update tokamak-titan-canyon images tag for sepolia'
+          cwd: 'tokamak-titan-infra/'
