--- a/.github/workflows/deposit_WithdrawalContainer.yml
+++ b/.github/workflows/deposit_WithdrawalContainer.yml
@@ -61,7 +61,7 @@ jobs:
           - name: Run devnet-up command
             run: make devnet-up
 
-          - name: cd to tokamak-titan-canyon/packages/sdk and execute test code
+          - name: cd tokamak-titan-canyon/packages/tokamak/sdk_execute test code
             run: |
-              cd packages/sdk
+              cd packages/tokamak/sdk
               npx hardhat deposit-eth --amount 40 --to 0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC --network devnetL1
