--- a/.github/workflows/release-docker-nightly.yml
+++ b/.github/workflows/release-docker-nightly.yml
@@ -352,13 +352,13 @@ jobs:
         with:
           repository: onthertech/tokamak-titan-infra
           ref: main
-          token: ${{ secrets.BOT_ACCESS_TOKEN }}
+          token: ${{ secrets.ACCESS_TOKEN }}
           path: tokamak-titan-infra
 
       - name: Setup Kustomize
         uses: imranismail/setup-kustomize@v1
         with:
-          github-token: ${{ secrets.BOT_ACCESS_TOKEN }}
+          github-token: ${{ secrets.ACCESS_TOKEN }}
 
       - name: Update titan-op-node Kubernetes resources
         run: |
@@ -389,6 +389,6 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
-          github_token: ${{ secrets.BOT_ACCESS_TOKEN }}
+          github_token: ${{ secrets.ACCESS_TOKEN }}
           message: '[AUTO] Update tokamak-titan-canyon images tag for sepolia'
           cwd: 'tokamak-titan-infra/'
