OR-1333 update example code to hardhat task

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,7 @@
 packages:
   - 'packages/*'
   - 'packages/tokamak/*'
+  - 'packages/tokamak/example'
   - 'endpoint-monitor'
   - 'op-exporter'
   - 'indexer/api-ts'
