--- a/packages/tokamak/sdk/package.json
+++ b/packages/tokamak/sdk/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "all": "pnpm clean && pnpm build && pnpm test && pnpm lint:fix && pnpm lint",
     "build": "tsc -p tsconfig.json",
+    "test-ton": "node examples/deposit-withdraw-ton-js/index.js",
     "clean": "rimraf dist/ ./tsconfig.tsbuildinfo",
     "preinstall": "npx only-allow pnpm",
     "lint": "pnpm lint:fix && pnpm lint:check",
@@ -63,8 +64,9 @@
   "dependencies": {
     "@eth-optimism/contracts": "0.6.0",
     "@eth-optimism/contracts-bedrock": "workspace:*",
-    "@tokamak-network/titan2-contracts": "workspace:*",
     "@eth-optimism/core-utils": "workspace:*",
+    "@tokamak-network/titan2-contracts": "workspace:*",
+    "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "merkletreejs": "^0.3.10",
     "rlp": "^2.2.7"
