--- a/packages/tokamak/contracts-bedrock/foundry.toml
+++ b/packages/tokamak/contracts-bedrock/foundry.toml
@@ -44,7 +44,7 @@ line_length=120
 multiline_func_header='all'
 bracket_spacing=true
 wrap_comments=true
-ignore = ['src/vendor/WETH9.sol']
+ignore = ['src/vendor/WTON.sol']
 
 ################################################################
 #                         PROFILE: CI                          #
