deposite/withdrawal Ton native token ci test

--- a/.github/workflows/Deposit-Withdrawal-Test.yml
+++ b/.github/workflows/Deposit-Withdrawal-Test.yml
@@ -2,7 +2,8 @@ name: Deposit-Withdrawal Test
 on:
   push:
     paths:
-      - '**'
+      - 'op-node/**'
+      - 'packages/tokamak/contracts-bedrock/**'
 
 jobs:
   env-setting:
