--- a/.github/workflows/geth-test_go.yml
+++ b/.github/workflows/geth-test_go.yml
@@ -14,10 +14,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install Go
-      uses: actions/setup-go@v4
+
+    - name: Set up Go 1.21
+      uses: actions/setup-go@v2
       with:
-        go-version: 1.18.x
+        go-version: 1.21
 
     - name: Checkout code
       uses: actions/checkout@v3
