OR-1392 e2e test.go

--- a/.github/workflows/geth-test_go.yml
+++ b/.github/workflows/geth-test_go.yml
@@ -2,7 +2,8 @@ name: geth unit tests
 on:
   push:
     paths:
-      - '**'
+      - 'op-node/**'
+      - 'packages/tokamak/contracts-bedrock/**'
 
 jobs:
   env-setting:
